Version 5.3.3
- Fix incorrect types in some const initializations.
- Fixed a problem with comments in the preprocessor
- Fixed incorrect line numbers after ASMCLK
- Fixed a bug in initializing arrays with modifiers like const

Version 5.3.2
- Accept ' as a digit separator as well as '_' (C++14 uses single quote)
- Avoid FCACHE in FCACHE (e.g. for loops with empty org/end)
- Disable inlining for functions explicitly placed in COG or LUT memory
- Cleaned up ABORT handling to be Spin2 compatible
- Improved removal of DEBUG() statements when -g is left out
- Some internal changes for 64 bit support (still a work in progress)
- Support ptrx[N] syntax in inline assembly

Version 5.3.1
- Added aliases for _pinw, _pinl, and _pinh in Spin (to match the documentation).
- Better error messages for some bad C function declarations.
- Cleaned up operator precedence to match Spin2
- Fixed typos in SmartSerial.spin that made it stop working
- Improved accuracy of parsing floating point constants.
- Provided default dummy functions for send() and recv()

Version 5.3.0
- Added SimpleSerial object for P1/P2 compatibility
- Added _lockrel() function for C
- Added header file with smartpin definitions (not strictly necessary in flexspin, but useful for compatibility with other compilers and Visual Studio)
- Adjusted output of floats in PRINT USING
- Allowed pin -1 to mean "no pin" in SmartSerial
- Changed the trivial Spin stub in P1 code to be compatible with openspin
  (this allows flexspin to be used to make the PropLoader fastloader)
- Changed handling of ? operator in Spin2 to be compatible with PNut
- Extended DEBUG() capability to include some backtick features
- Fixed argv[0] handling in the command line tools
- Fixed use of FCACHE in inline assembly in LUT and COG functions
- Fixed BASIC input when 127 (DEL) is read (Unix terminals use this for backspace)
- Fixed a problem with parsing floating point numbers with 32 bit compilers