@@ -3,6 +3,7 @@ Version 5.3.3
 - Fixed a problem with comments in the preprocessor
 - Fixed incorrect line numbers after ASMCLK
 - Fixed a bug in initializing arrays with modifiers like const
+- Fixed some union initializer bugs
 
 Version 5.3.2
 - Accept ' as a digit separator as well as '_' (C++14 uses single quote)
